--- a/tasks/templates/pelicula.html
+++ b/tasks/templates/pelicula.html
@@ -1,4 +1,5 @@
 {% extends "index.html" %}
+{% load static %}
 {% block contenido_interno %}
 <br/><h1>Cartelera</h1><br/>
     <div class="contenido-pelicula">
@@ -29,12 +30,11 @@
                 </div>
             </div>
         </div>
-        <img src="{% static 'img/pelicula/'~ pelicula.id ~'.jpg' %}" width="160" height="226"><br/><br/>
+        <img src="{% static 'img/pelicula/' %}{{ pelicula.id }}.jpg" width="160" height="226"><br/><br/>
     </div>
     <div class="pelicula-video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ pelicula.Link }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <embed src="https://www.youtube.com/v/{{ pelicula.Link }}" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="580" height="400">
     </div>
- 
 {% endblock %}
  
 				 
